data preview done

--- a/src/pages/dataoffering/anonymizer/IDSAnoymizerPage.html
+++ b/src/pages/dataoffering/anonymizer/IDSAnoymizerPage.html
@@ -2,15 +2,14 @@
   <v-stepper v-model="e1">
     <v-stepper-header>
       <v-stepper-step :complete="e1 > 1" step="1">
-        Name of step 1
+        Upload file
       </v-stepper-step>
 
       <v-divider></v-divider>
 
       <v-stepper-step :complete="e1 > 2" step="2">
-        Name of step 2
+        Specify data type
       </v-stepper-step>
-
       <v-divider></v-divider>
 
       <v-stepper-step step="3">
