--- a/src/pages/dataoffering/anonymizer/IDSAnoymizerPage.html
+++ b/src/pages/dataoffering/anonymizer/IDSAnoymizerPage.html
@@ -1,17 +1,52 @@
 <div class="content">
+  <v-dialog v-model="dialog" max-width="500px">
+    <v-card>
+      <v-card-title class="headline grey lighten-2">
+        {{title}}
+      </v-card-title>
+      <v-card-text>
+        <v-container>
+          <v-row>
+            <v-col cols="12" sm="6" md="4">
+              <v-text-field v-model="editedItem.name" label="Dessert name"></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="4">
+              <v-text-field v-model="editedItem.calories" label="Calories"></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="4">
+              <v-text-field v-model="editedItem.fat" label="Fat (g)"></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="4">
+              <v-text-field v-model="editedItem.carbs" label="Carbs (g)"></v-text-field>
+            </v-col>
+            <v-col cols="12" sm="6" md="4">
+              <v-text-field v-model="editedItem.protein" label="Protein (g)"></v-text-field>
+            </v-col>
+          </v-row>
+        </v-container>
+      </v-card-text>
+
+      <v-card-actions>
+        <v-spacer></v-spacer>
+        <v-btn @click="close">
+          Cancel
+        </v-btn>
+        <v-btn color="primary" @click="save">
+          Save
+        </v-btn>
+      </v-card-actions>
+    </v-card>
+  </v-dialog>
   <v-stepper v-model="e1">
     <v-stepper-header>
       <v-stepper-step :complete="e1 > 1" step="1">
         Upload file
       </v-stepper-step>
-
       <v-divider></v-divider>
-
       <v-stepper-step :complete="e1 > 2" step="2">
-        Specify data type
+        Configure
       </v-stepper-step>
       <v-divider></v-divider>
-
       <v-stepper-step step="3">
         Name of step 3
       </v-stepper-step>
@@ -26,25 +61,35 @@
       </v-stepper-content>
 
       <v-stepper-content step="2">
-        <v-card elevation="2" raised>
-          <v-card-title>Datatable with API</v-card-title>
-          <v-data-table :page="page" :pageCount="numberOfPages" :headers="headers" :items="passengers"
-            :options.sync="options" :server-items-length="totalPassengers" :loading="loading" class="elevation-1">
-            <template v-slot:item.logo="{ item }">
-              <v-img src="item.airline.logo" style="width: 10%;"></v-img>
+        <v-card elevation="1" raised>
+          <v-card-title>Configuration</v-card-title>
+          <v-data-table :headers="headers" :items="items" item-key="columnName">
+            <template v-slot:item.data_type="{ item }">
+              <v-select v-model="item.data_type" :items="cSel">
+              </v-select>
             </template>
-            <template v-slot:item.website="{ item }">
-              <a :href="item.airline.website">{{ item.airline.website }}</a>
+            <template v-slot:item.transform_type="{ item }">
+              <v-select v-model="item.transform_type" :items="dSel"></v-select>
+            </template>
+            <template v-slot:item.attr_type="{ item }">
+              <v-select v-model="item.attr_type" :items="eSel"></v-select>
+            </template>
+            <template v-slot:item.actions="{ item }">
+              <v-icon small class="mr-2" @click="editItem(item)">
+                mdi-pencil
+              </v-icon>
+              <v-icon small @click="configureItem(item)">
+                mdi-wrench
+              </v-icon>
             </template>
           </v-data-table>
-          <v-btn color="primary" @click="e1 = 1">
-            Previous
-          </v-btn>
-
-          <v-btn color="primary" @click="e1 = 3">
-            Continue
-          </v-btn>
         </v-card>
+        <v-btn color="primary" @click="e1 = 1">
+          Previous
+        </v-btn>
+        <v-btn color="primary" @click="e1 = 3">
+          Continue
+        </v-btn>
       </v-stepper-content>
       <v-stepper-content step="3">
         <v-card class="mb-12" color="grey lighten-1" height="200px">
